tests/NormalTests/paczka1/small_fuzzy/66312072.err
Error in line 7: zFnuIKQC S327 3,0
Error in line 9: cVC6fVUMR A919 72,3
